# makepad-book

./: .gitignore  README.md  i18n.json  package.json  pnpm-lock.yaml  rspress.config.ts
.github/workflows/: deploy.yml  main.yml
.husky/: commit-msg
docs/en/: _meta.json  index.md
docs/en/contribute/: dev-setup.mdx  index.mdx
docs/en/examples/: _meta.json  introduction.md
docs/en/examples/makepad-workshop-gosim-beijing-2024/: index.mdx
docs/en/guide/: _meta.json
docs/en/guide/animation-system/: best-practice.mdx  building-basic-animation-component.mdx  debug-animation.mdx  example-animation.mdx  index.mdx
docs/en/guide/appendix/: live-DSL-code-style.mdx
docs/en/guide/layout-system/: attribute-inheritance-relation.mdx  best-practice.mdx  index.mdx  (+3 more)
docs/en/online-salon/: index.mdx
docs/en/workshop/: index.mdx
docs/zh/: _meta.json  index.md
docs/zh/contribute/: _meta.json
docs/zh/examples/: _meta.json  introduction.md
docs/zh/guide/: _meta.json  index.mdx
docs/zh/online-salon/: index.mdx
docs/zh/workshop/: index.mdx
examples-source-code/: Cargo.toml
examples-source-code/hello-makepad/: Cargo.toml  README.md
examples-source-code/hello-makepad/src/: app.rs  main.rs
examples-source-code/makepad-workshop-gosim-beijing-2024/: Cargo.toml
examples-source-code/makepad-workshop-gosim-beijing-2024/src/: main.rs
scripts/: verify-commit.js
theme/: index.css  index.tsx  types.d.ts
theme/components/Announcement/: index.tsx
theme/components/announcement/: index.module.scss
theme/i18n/: enUS.ts  index.ts  zhCN.ts
theme/pages/: home.tsx
(+38 files in other folders)
